0.23.2	UNRELEASED

 * Only write Git index extensions when they contain meaningful data.
   Previously, dulwich would write empty extensions to the index file,
   causing unnecessary bloat.
   (Andrew Shadura, Jelmer Vernooĳ, #1643)

 * Document that ``porcelain.push`` returns per-ref status information
   in the ``SendPackResult`` object. Added test coverage to verify this
   functionality works as expected.
   (Jelmer Vernooĳ, #780)

 * Add porcelain submodule commands: ``submodule_update``, ``submodule_add`` 
   CLI command, and ``submodule_update`` CLI command. Add ``--recurse-submodules``
   option to ``clone`` command. (#506, Jelmer Vernooĳ)

 * Support popping stashes. (Jelmer Vernooĳ)

 * Add support for parsing Git attributes from .gitattributes files.
   This enables proper handling of text/binary detection, line ending
   normalization, and filter specifications for files.
   (Jelmer Vernooĳ, #1211)

0.23.1	2025-06-30

 * Support ``untracked_files="normal"`` argument to ``porcelain.status``,
   and make this the default.
   (Jelmer Vernooĳ, #835)

 * Fix ``parse_commit`` to properly dereference annotated tags when
   checking out tags. Previously, checking out an annotated tag would
   fail with a KeyError.
   (Jelmer Vernooĳ, #1638)

 * Handle different file type transitions properly in ``update_working_tree``
   (Jelmer Vernooĳ, #1638)

 * Fix KeyError when pulling from a shallow clone. Handle missing commits
   gracefully in graph traversal operations for shallow repositories.
   (Jelmer Vernooĳ, #813)

 * Return symrefs from ls_refs. (Jelmer Vernooĳ, #863)

 * Support short commit hashes in ``porcelain.reset()``.
   (Jelmer Vernooĳ, #1154)

 * Support dumb repository access.
   (Jelmer Vernooĳ, #1097)

 * Fix TypeError when cloning repositories with bytes paths on Windows.
   (Jelmer Vernooĳ, #973)

 * Support ``depth`` for local clones.
   (Jelmer Vernooĳ)

 * Add basic support for managing Notes. (Jelmer Vernooĳ)
